--- a/index.html
+++ b/index.html
@@ -1,12 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--bootstrap links-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+
+    <!--css link-->
+    <link rel="stylesheet" href="css/styles.css">
     <title> 3 Star Media</title>
 </head>
+
 <body>
+    <div class="navigation row-farjiya">
+        <nav class="navbar navbar-expand-lg  bg-dark">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">
+                <img src="images/logo.png" alt="logo"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ">
+                        <li class="nav-item">
+                            <a class="nav-link active text-white" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">About Us</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Services</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Team</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Contact</a>
+                        </li>          
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </div>
     
+    <section role="banner" class="banner container-fluid pt-5 pb-5">
+        <div class="container px-3 py-3">
+            <h1 class="display-1 text-white">
+                Welcome to Three star Media
+            </h1>
+            <p class="text-white">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus animi libero aliquid et, reiciendis nisi velit voluptatum ducimus possimus, magnam saepe, cumque deleniti repudiandae veritatis! Rerum facilis omnis tempora iure.
+            </p>
+            <button type="button" class="btn btn-primary btn-lg">Large Button </button>
+        </div>
+    </section>
+</script>
 </body>
+
 </html>
