--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--bootstrap links-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
     <!--css link-->
     <link rel="stylesheet" href="css/styles.css">
@@ -14,50 +15,231 @@
 </head>
 
 <body>
-    <div class="navigation row-farjiya">
-        <nav class="navbar navbar-expand-lg  bg-dark">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">
-                <img src="images/logo.png" alt="logo"></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ">
-                        <li class="nav-item">
-                            <a class="nav-link active text-white" aria-current="page" href="#">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">About Us</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Services</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Team</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Contact</a>
-                        </li>          
-                    </ul>
+    <main>
+        <div class="navigation row-farjiya">
+            <nav class="navbar navbar-expand-lg  bg-dark">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="#">
+                        <img src="images/logo.png" alt="logo"></a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav ">
+                            <li class="nav-item">
+                                <a class="nav-link active text-white" aria-current="page" href="#">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#about-us">About Us</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#service">Services</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#team">Team</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Contact</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </div>
+
+        <section role="banner" class="banner container-fluid py-5">
+            <div class="container px-3 py-3">
+                <h1 class="display-1 text-white">
+                    Welcome to Three star Media
+                </h1>
+                <p class="text-white">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus animi libero aliquid et,
+                    reiciendis
+                    nisi velit voluptatum ducimus possimus, magnam saepe, cumque deleniti repudiandae veritatis! Rerum
+                    facilis omnis tempora iure.
+                </p>
+                <button type="button" class="btn btn-primary btn-lg">Connect with Us &raquo; </button>
+            </div>
+        </section>
+
+        <section id="about-us" class="abt-us container-fluid py-5">
+            <div class="container">
+                <div class="row row-cols-md-2">
+                    <img class="col img-fluid" src="images/about-us.jpg" alt="about-us">
+                    <div class="col">
+                        <h2>About Us</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat eligendi repellendus
+                            quaerat
+                            inventore earum perferendis non unde asperiores nesciunt. Saepe ex expedita vitae deleniti
+                            architecto consequatur fugiat, non ut facilis?
+                        </p>
+                    </div>
                 </div>
             </div>
-        </nav>
-    </div>
-    
-    <section role="banner" class="banner container-fluid pt-5 pb-5">
-        <div class="container px-3 py-3">
-            <h1 class="display-1 text-white">
-                Welcome to Three star Media
-            </h1>
-            <p class="text-white">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus animi libero aliquid et, reiciendis nisi velit voluptatum ducimus possimus, magnam saepe, cumque deleniti repudiandae veritatis! Rerum facilis omnis tempora iure.
-            </p>
-            <button type="button" class="btn btn-primary btn-lg">Large Button </button>
-        </div>
-    </section>
-</script>
+        </section>
+
+        <section id="services" class="services container">
+            <div class="row pb-3 justify-content-center">
+                <h2>Our Services</h2>
+                <div class="card col-md" style="width: 18rem;">
+                    <img src="images/digital.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Digital</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the
+                            card's content.</p>
+                        <a href="#" class="btn btn-primary">Digital Plans &raquo;</a>
+                    </div>
+                </div>
+                <div class="card col-md" style="width: 18rem;">
+                    <img src="images/marketing.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Marketing</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the
+                            card's content.</p>
+                        <a href="#" class="btn btn-primary">Marketing &raquo;</a>
+                    </div>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="card col-md" style="width: 18rem;">
+                    <img src="images/video.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Video Production</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the
+                            card's content.</p>
+                        <a href="#" class="btn btn-primary">Video Plans &raquo;</a>
+                    </div>
+                </div>
+                <div class="card col-md" style="width: 18rem;">
+                    <img src="images/web.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Web Development</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the
+                            card's content.</p>
+                        <a href="#" class="btn btn-primary">Web Plans &raquo;</a>
+                    </div>
+                </div>
+                <div class="card col-md" style="width: 18rem;">
+                    <img src="images/print.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Print</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the
+                            card's content.</p>
+                        <a href="#" class="btn btn-primary">Print Plans &raquo;</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="vision" class="vision container-fluid text-white py-5">
+            <div class="container">
+                <h2 class="text-white">Our Vision</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum adipisci, porro, perspiciatis omnis
+                    recusandae dolor commodi molestias minima laudantium minus cumque? Quos fugiat numquam dolores quam
+                    officia perspiciatis explicabo harum!
+                </p>
+                <button type="button" class="btn btn-primary btn-lg">Learn More &raquo; </button>
+            </div>
+        </section>
+
+
+        <section id="team" class="team container py-5 px-5">
+            <h2>Our Team</h2>
+            <div class="row no-gutter">
+                <img src="images/john.jpg" alt="" class="img-fluid col-md">
+                <div class="col-md team-member">
+                    <h3>John Doe</h3>
+                    <p class="h4"> CEO and co-owner</p>
+                    <hr>
+                    <p>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus reprehenderit cupiditate
+                        eius possimus repellendus illo, repudiandae enim, soluta deleniti aliquam accusantium fugit
+                        dolor. Fugit ab ipsam repellat mollitia sit similique!
+                    </p>
+                </div>
+                <div class="row">
+                    <div class="col-md team-member order-1 order-md">
+                        <h3>Bob Rite</h3>
+                        <p class="h4"> CEO and co-owner</p>
+                        <hr>
+                        <p>
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus reprehenderit
+                            cupiditate eius possimus repellendus illo, repudiandae enim, soluta deleniti aliquam
+                            accusantium fugit dolor. Fugit ab ipsam repellat mollitia sit similique!
+                        </p>
+                    </div>
+                    <img src="images/bob.jpg" alt="" class="img-fluid col-md order-0">
+                </div>
+            </div>
+        </section>
+
+        <section id="contact" class="contact container">
+            <h2>Contact Us</h2>
+            <div class="row">
+                <div class="msg">
+                    <form class="message col-md">
+                        <h3>Send us a msg</h3>
+                        <label for="name"> Full Name</label>
+                        <br>
+                        <input type="text" name="" id="name">
+                        <br>
+                        <label for="email"> Email</label>
+                        <br>
+                        <input type="text" name="" id="eamil">
+                        <br>
+                        <label for="msg"> Message</label>
+                        <br>
+                        <textarea name="" id="msg" cols="30" rows="10"></textarea>
+                        <br>
+                        <input type="button" value="send">
+                    </form>
+                    <div class="location py-5">
+                        <h3>Location</h3>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2803.79482352402!2d-75.81074382352682!3d45.352953871072174!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce00e77e7bc705%3A0xcd769fee89fbe25f!2s230%20Woodridge%20Crescent%2C%20Nepean%2C%20ON%20K2B%208G2!5e0!3m2!1sen!2sca!4v1678823020633!5m2!1sen!2sca" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
+                </div>
+            </div>
+            <section class="hours py-5">
+                <h3>
+                    Hours of operation
+                </h3>
+                <table class="table">
+                    <thead>
+                      <tr>
+                        <th scope="col">Days</th>
+                        <th scope="col">Hours</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <td>Monday-Friday</td>
+                        <td> <time>9AM</time> - <time> 6 PM</time> </td>
+                      </tr>
+                      <tr>
+                        <td>Saturday-Sunday</td>
+                        <td>Closed</td>
+                      </tr>
+                    </tbody>
+                  </table>
+            </section>
+        </section>
+    </main>
+
+    <footer class="container-fluid bg-dark text-white">
+        <p class="mb-0">   &copy; Three star Media.
+        </p>
+        <p>
+            All images taken from <a href="#">unplash</a>
+        </p>
+    </footer>
 </body>
 
 </html>
